Project

General

Profile

Actions

Bug #60094

closed

crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)

Added by Telemetry Bot about 1 year ago. Updated 6 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Target version:
-
% Done:

100%

Source:
Telemetry
Tags:
backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):

14b039ac3efd545bbab9a81f9b6cc1fe16e333214900d984e16efcd6148fb8f8
562a732b3c915106f2bbd1dd754b1a68c94ef3b67c92fddd93cbe2e837d177d5
aaa30c5f68b184f498cf286a2360164e8b3c87005263c947755ad682e7996c24
cdfbecdfa6b4679edb1a2e0f39cf01795bde2fe2a304bf42cba660bcc82b8bfb


Description

http://telemetry.front.sepia.ceph.com:4000/d/jByk5HaMz/crash-spec-x-ray?orgId=1&var-sig_v2=85b1d2355530c0b80fc99fc58c6697f9049d149d8142bb87ba5afc268a35ff7c

Sanitized backtrace:

    RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)
    RGWSI_Notify::finalize_watch()
    RGWServices_Def::shutdown()
    RGWServices_Def::~RGWServices_Def()
    RGWRados::~RGWRados()
    rgw::sal::RadosStore::~RadosStore()
    StoreManager::init_storage_provider(DoutPrefixProvider const*, ceph::common::CephContext*, std::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, bool, bool, bool, bool, bool, bool)
    radosgw_Main(int, char const**)

Crash dump sample:
{
    "backtrace": [
        "/lib64/libpthread.so.0(+0x12cf0) [0x7f8107f16cf0]",
        "/lib64/librados.so.2(+0x6fb02) [0x7f810b720b02]",
        "/lib64/librados.so.2(+0xbccc9) [0x7f810b76dcc9]",
        "/lib64/librados.so.2(+0xaeeda) [0x7f810b75feda]",
        "/lib64/librados.so.2(+0xaf989) [0x7f810b760989]",
        "(RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)+0x30) [0x7f810accd270]",
        "(RGWSI_Notify::finalize_watch()+0x40) [0x7f810acce240]",
        "/lib64/libradosgw.so.2(+0xe0c2a5) [0x7f810acce2a5]",
        "(RGWServices_Def::shutdown()+0x4a) [0x7f810a6e1a7a]",
        "(RGWServices_Def::~RGWServices_Def()+0x12) [0x7f810a6e1b02]",
        "(RGWRados::~RGWRados()+0x65) [0x7f810aa55725]",
        "(rgw::sal::RadosStore::~RadosStore()+0x25) [0x7f810ab32985]",
        "(StoreManager::init_storage_provider(DoutPrefixProvider const*, ceph::common::CephContext*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, bool, bool, bool, bool, bool, bool, bool)+0x9eb) [0x7f810ab3212b]",
        "(radosgw_Main(int, char const**)+0xe23) [0x7f810a65c1e3]",
        "__libc_start_main()",
        "_start()" 
    ],
    "ceph_version": "17.2.5",
    "crash_id": "2023-03-09T13:23:49.341216Z_e2139d4a-0400-4c45-b130-ce1cf78429ed",
    "entity_name": "client.ffb72fa9fa8c97981a145c7898756cad428bf734",
    "os_id": "centos",
    "os_name": "CentOS Stream",
    "os_version": "8",
    "os_version_id": "8",
    "process_name": "radosgw",
    "stack_sig": "aaa30c5f68b184f498cf286a2360164e8b3c87005263c947755ad682e7996c24",
    "timestamp": "2023-03-09T13:23:49.341216Z",
    "utsname_machine": "x86_64",
    "utsname_release": "5.15.0-67-generic",
    "utsname_sysname": "Linux",
    "utsname_version": "#74-Ubuntu SMP Wed Feb 22 14:14:39 UTC 2023" 
}


Related issues 3 (0 open3 closed)

Copied to rgw - Backport #63058: pacific: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)ResolvedCasey BodleyActions
Copied to rgw - Backport #63059: quincy: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)ResolvedCasey BodleyActions
Copied to rgw - Backport #63060: reef: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long)ResolvedCasey BodleyActions
Actions #1

Updated by Telemetry Bot about 1 year ago

  • Crash signature (v1) updated (diff)
  • Crash signature (v2) updated (diff)
  • Affected Versions v17.2.5 added
Actions #2

Updated by Casey Bodley 8 months ago

  • Status changed from New to Pending Backport
  • Backport set to pacific quincy reef
  • Pull request ID set to 53691
  • Crash signature (v1) updated (diff)
Actions #3

Updated by Backport Bot 8 months ago

  • Copied to Backport #63058: pacific: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long) added
Actions #4

Updated by Backport Bot 8 months ago

  • Copied to Backport #63059: quincy: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long) added
Actions #5

Updated by Backport Bot 8 months ago

  • Copied to Backport #63060: reef: crash: RGWSI_Notify::unwatch(RGWSI_RADOS::Obj&, unsigned long) added
Actions #6

Updated by Backport Bot 8 months ago

  • Tags set to backport_processed
Actions #7

Updated by Konstantin Shalygin 6 months ago

  • Status changed from Pending Backport to Resolved
  • % Done changed from 0 to 100
Actions

Also available in: Atom PDF